<resources>
    <string name="app_name">ShaadiDemo</string>

    <!--User Details-->
    <string name="address">Address</string>
    <string name="street_name">Street Name :</string>
    <string name="city">City :</string>
    <string name="state">State :</string>
    <string name="post_code">Post Code :</string>
    <string name="no_of_followers">No of Followers :</string>
    <string name="na">NA</string>

    <string name="accepted">You have been Accepted</string>
    <string name="rejected">You have been Rejected</string>
    <string name="loading">Loading...</string>


</resources>
